--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "youtube-node-js-course-2022",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "main.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/ferzphil/nodejs-course-2022#readme",
   "dependencies": {
-    "nodemon": "^2.0.20"
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
